apps/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
	name: whoami-service
	labels:
		app: whoami
spec:
	type: ClusterIP
	selector:
		app: whoami
	ports:
		- name: http
			port: 80
			targetPort: 80
			protocol: TCP
